# Data-Structures

./: README.md
DoublyLinkedList/: DoubleLinkedListTest.h
DoublyLinkedList/DoublyLinkedList/: CMakeLists.txt  DoubleLinkedNode.h  DoublyLinkedList.h  DoublyLinkedListIterator.h  ReverseDoublyLinkedListIterator.h
FindDeterminant/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
Matrix/: 2X2TestMatrix.txt  4X4TestMatrix.txt  5X5TestMatrix.txt  6X6TestMatrix.txt  8X8TestMatrix.txt  CMakeLists.txt  main.c  matrix.c  matrix.h
Monopoly/: Board.c  Board.h  CMakeLists.txt  GameState.c  GameState.h  HoardingTypeDefs - Copy.h  Makefile  Move.c  Move.h  Player.c  Player.h  Property.c  Property.h  PropertyManager.c  PropertyManager.h  PropertySet.c  PropertySet.h  Rules.c  Rules.h  Space.c  Space.h  Utility.c  Utility.h  main.c
